@@ -62,7 +62,10 @@
       ~mu4e-personal-address-p~ to check whether a given string matches a personal
       address.
 
-    - Completion for writing ~mu~ queries
+    - TAB-Completion for writing ~mu~ queries
+
+    - Switch the context for existing draft messages using
+      ~mu4e-compose-context-switch~ or ~C-c C-;~ in ~mu4e-compose-mode~.
 
 * 1.4 (released, as of April 18 2020)
 
@@ -235,7 +238,7 @@
 
       For now this is experimental ("tech preview"), but might replace the
       current message-view in a future release. Enable it with:
-               (setq mu4e-view-use-gnus t)
+	       (setq mu4e-view-use-gnus t)
 
       Thanks to Christophe Troestler for his work on fixing various encoding
       issues.
